# monetdbe-python-dummy

./: .gitignore  GUIDEDTOUR.md  REQUIREMENTS.md  ci-requirements.txt  pyproject.toml  setup.py  test.sh  todo.txt
.github/workflows/: binaries.yml  buildwheel.yml  static-analysis.yml  wheels.yml
actions/install-correct-monetdb-version/: action.yml
doc/: conf.py
monetdbe/: __init__.py  connection.py  cursors.py  version.py
monetdbe/_cffi/: builder.py  embed.h.j2  internal.py  native_utilities.c  util.py
scripts/: do-everything.py  hash-sdist.py  hash-source.py  monetdb-version-to-embed.py  pick-cache-hash.py
tests/: test_backup.py  test_cffi.py  test_dataframe.py  test_dbapi.py  test_factory.py  test_formatting.py  test_hooks.py  test_types.py  test_userfunctions.py  util.py
tests/test_lite/: test_dbapi03.py  test_pylite00.py
